# wm-ax

./: .env  .gitignore  Cargo.toml  README.md  wm-ax-start.sh  wm-ax.service
backend/: .env  Cargo.toml  Procfile
backend/migrations/2020-07-14-162132_create_posts/: down.sql  up.sql
backend/migrations/2020-07-15-061500_rename_articles_body_to_content/: down.sql  up.sql
backend/migrations/2020-07-16-081135_add-slug-column-to-article/: down.sql  up.sql
backend/migrations/2020-08-13-174323_create_tags/: up.sql
backend/migrations/2020-08-13-181707_create_tags_of_articles/: down.sql  up.sql
backend/src/: main.rs  models.rs  schema.rs  tests.rs  tests.sh
extras/: db_url.sh  wm-ax.service  wm.ax.conf
frontend/: package-lock.json  package.json
frontend/blog/: package-lock.json  package.json
frontend/blog/src/: App.js  settings.js
frontend/blog/src/components/: article-create-form.js  article-form-component.js  long-list-browser.js
frontend/blog/src/utilities/: fetchers.js  router.js
frontend/blog/src/views/: latest_posts.js  (+2 more)
frontend/public/: manifest.json
frontend/src/: App.js  index.js  settings.js  urls.js
frontend/src/components/: article-create-form.js  outer-header.js  router.js  search.js
frontend/src/utilities/: codeblock.js
frontend/src/views/: home.js  latest_posts.js  new_post.js  post_detail.js
migrations/00000000000000_diesel_initial_setup/: .#up.sql
migrations/2020-06-23-192115_create_articles/: up.sql
posts/: low_bat.html  low_bat.md
src/: main.rs  models.rs  schema.rs
tests/: article.json  article_create.json
