[package]
name = "blog"
version = "0.1.0"
authors = ["Max Weiss <30f0fn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slug = "0.1.4"
itertools = "0.9.0"
rocket_cors = "0.5.2"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]